<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackgroudColor"
    android:padding="24dp"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/content_desc_app_logo"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/app_connect_title"
            android:textColor="@color/white"
            android:textSize="26sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgLogo" />

        <TextView
            android:id="@+id/tvWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/welcome_back"
            android:textColor="#E0E0E0"
            android:textSize="29sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAppName" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/hint_email"
            android:textColorHint="@color/PrimaryColor"
            app:boxStrokeColor="@color/PrimaryColor"
            app:hintTextColor="@color/PrimaryColor"
            app:startIconDrawable="@drawable/username_24"
            app:startIconTint="@color/PrimaryColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvWelcome">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilUsername"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/hint_username"
            android:textColorHint="@color/PrimaryColor"
            app:boxStrokeColor="@color/PrimaryColor"
            app:hintTextColor="@color/PrimaryColor"
            app:startIconDrawable="@drawable/username_24"
            app:startIconTint="@color/PrimaryColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/hint_password"
            android:textColorHint="@color/PrimaryColor"
            app:boxStrokeColor="@color/PrimaryColor"
            app:hintTextColor="@color/PrimaryColor"
            app:startIconDrawable="@drawable/password_24"
            app:startIconTint="@color/PrimaryColor"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/PrimaryColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilUsername">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilConfirm_Password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/hint_confirm_password"
            android:textColorHint="@color/PrimaryColor"
            app:boxStrokeColor="@color/PrimaryColor"
            app:hintTextColor="@color/PrimaryColor"
            app:startIconDrawable="@drawable/password_24"
            app:startIconTint="@color/PrimaryColor"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/PrimaryColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilPassword">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etConfirm_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnRegister"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="32dp"
                    android:backgroundTint="@color/PrimaryColor"
                    android:text="@string/btn_Register"
                    android:textColor="@color/BackgroudColor"
                    android:textSize="18sp"
                    app:cornerRadius="30dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tilConfirm_Password" />


        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/forgot_password"
            android:textColor="@color/PrimaryColor"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnRegister" />

        <TextView
            android:id="@+id/tvOrRegisterWith"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/Or_Register_with"
            android:textColor="@color/white"
            android:textSize="25dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/tvForgotPassword"/>


        <ImageView
            android:id="@+id/btnFacebook"
            style="@style/Btn_round_edit"
            android:layout_width="71dp"
            android:layout_height="71dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/facebook"
            android:background="@drawable/btn_round"
            app:layout_constraintTop_toBottomOf="@id/tvOrRegisterWith"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnGoogle"
            app:layout_constraintHorizontal_chainStyle="packed"/>

        <ImageView
            android:id="@+id/btnGoogle"
            style="@style/Btn_round_edit"
            android:layout_width="71dp"
            android:layout_height="71dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/google"
            android:background="@drawable/btn_round"
            app:layout_constraintTop_toBottomOf="@id/tvOrRegisterWith"
            app:layout_constraintStart_toEndOf="@id/btnFacebook"
            app:layout_constraintEnd_toStartOf="@id/btnGitHub"/>

        <ImageView
            android:id="@+id/btnGitHub"
            style="@style/Btn_round_edit"
            android:layout_width="71dp"
            android:layout_height="71dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/github"
            android:background="@drawable/btn_round"
            app:layout_constraintTop_toBottomOf="@id/tvOrRegisterWith"
            app:layout_constraintStart_toEndOf="@id/btnGoogle"
            app:layout_constraintEnd_toEndOf="parent"/>

        <LinearLayout
            android:id="@+id/llSignUpRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/btnGoogle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/tvDontHaveAccountYet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dont_have_account"
                android:textColor="@color/white"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/tvSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_text"
                android:textColor="@color/PrimaryColor"
                android:textSize="16sp"/>
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
